--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
     # BLoC
   flutter_bloc: ^8.1.3
@@ -25,13 +23,13 @@ dependencies:
   pretty_dio_logger: ^1.3.1
 
     # Local Storage
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.5.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
     # Dependency Injection
-  get_it: ^7.6.4
-  injectable: ^2.3.2
+  get_it: ^9.2.0
+  injectable: ^2.7.1+4
 
     # Functional Programming
   dartz: ^0.10.1
@@ -39,6 +37,7 @@ dependencies:
     # Code Generation
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -53,23 +52,10 @@ dev_dependencies:
   # Testing
   bloc_test: ^9.1.5
   mocktail: ^1.0.1
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^6.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
